# datastruct-argorithm

./: .gitignore  CMakeLists.txt  README.md
argorithm/: maxCommonDivisor.cpp
struct/: triplet.cpp
struct/list/: DuLinkList.cpp  LinkList.cpp  SLinkLIst.cpp  cLinkedList.cpp  headLinkedList.cpp  linkedList.cpp  seqList.cpp  staticLinkedList.cpp
struct/list/argorithm/: polynomial.cpp
struct/stack/: SqStack.cpp  linkStack.cpp
struct/stack/argorithm/: bracketMatch.cpp  conversion.cpp
